--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.3
   firebase_auth: ^4.17.3
-
+  cloud_firestore: ^4.15.4
+  http: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
