--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.17.3
   cloud_firestore: ^4.15.4
   http: ^1.2.0
+  uuid: ^4.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
